# BioBLP

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
bioblp/: data.py  evaluate.py  logger.py  logging.py  preprocess.py  train.py  train_argparse.py
conf/: complex-biokg-20220826.toml  complex-biokg-full-20220826.toml  complex-hetionet-20220826.toml  dpi-benchmark-cv-20230404.toml  dpi-benchmark-cv-20230413-mlp-2.toml  dpi-benchmark-cv-20230413-mlp-3.toml  dpi-benchmark-cv-20230413-mlp-4.toml  dpi-benchmark-cv-20230413-mlp.toml  dpi-benchmark-cv-20230413.toml  dpi-benchmark-cv-20230421-eval.toml  dpi-benchmark-cv-20230423-lr.toml  dpi-benchmark-cv-20230423-mlp-1.toml  dpi-benchmark-cv-20230423-mlp-2.toml  dpi-benchmark-cv-20230423-mlp-3.toml  dpi-benchmark-cv-20230423-rf.toml  dpi-benchmark-cv-r1-20230424-mlp-bioblpp-rerun.toml  dpi-benchmark-cv-r1-20230424-mlp.toml  dpi-benchmark-cv-r1-20230424-rflr.toml  dpi-benchmark-train-20221216.toml  dpi-benchmark-train-20230310.toml  dpi-benchmark-train-20230329.toml  dpi-benchmark-train-20230404-mlp.toml  dpi-benchmark-train-20230404.toml  dpi-benchmark-train-20230421-eval.toml  dpi-bm-exp-test-20230224-mlp.toml  dpi-bm-exp-test-20230224.toml  dpi-diagnose-lr-20230423.toml
jobs/: biokg-bioblp-d-complex-initialized.sh  biokg-bioblp-d-complex.sh  biokg-bioblp-d-rotate-initialized.sh  biokg-bioblp-d-rotate.sh  biokg-bioblp-d-transe-initialized.sh  biokg-bioblp-d-transe.sh  biokg-bioblp-m-complex-bce-sweep.sh  biokg-bioblp-m-complex-bce-sweep.yml  biokg-bioblp-m-rotate-adagrad-sweep.sh  biokg-bioblp-m-rotate-adagrad-sweep.yml  biokg-bioblp-m-rotate-sweep.sh  (+36 more)
(+91 files in other folders)
